--- a/circle.yml
+++ b/circle.yml
@@ -3,9 +3,15 @@ machine:
     - docker
 dependencies:
   override:
+    - bash setup-heroku.sh
     - docker pull mysql
     - docker build -t docker-api-devf .
     - docker run --name docker-mysql -e MYSQL_ROOT_PASSWORD=Mipass_12345 -e MYSQL_DATABASE=danmificadosDb -d mysql
 test:
   override:
-    - docker run -it --link docker-mysql:mysql docker-api-devf sh tests.sh
+    - docker run -it --link docker-mysql:mysql -e DJANGO_ENV=development docker-api-devf sh tests.sh
+deployment:
+  qa:
+    branch: master
+    commands:
+      - sh deploy.sh
